# opencryptoki-382

./: .gitignore  .travis.yml  Makefile.CI  README  README.md  configure.ac
misc/: pkcsslotd.service.in
rpm/: opencryptoki.spec
support/: bootstrap-docker.sh  travis-rpm.yml  travis.yml
testcases/crypto/: Makefile.am  eckeycreate_func.c  sm2_func.c  sm2_keypair_gen_func.c
usr/include/pkcs11/: pkcs11types.h
usr/lib/pkcs11/: Makefile.am
usr/lib/pkcs11/api/: api_interface.c
usr/lib/pkcs11/common/: gm_crypt.c  key.c  key_mgr.c  mech_ec.c  sign_mgr.c  template.c  trace.c  trace.h  verify_mgr.c
usr/lib/pkcs11/gm11_stdll/: Makefile.am  gm11.h  gm11_func.h  gm11_specific.c  gm11_specific.h  new_host.c  tok_struct.h
usr/lib/pkcs11/gm_stdll/: Makefile.am  gm_specific.c  tok_struct.h
usr/sbin/pkcsconf/: pkcsconf_msg.h
usr/sbin/pkcsslotd/: opencryptoki.conf
